--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,6 +35,12 @@ spring:
   sql:
     init:
       mode: always # prod: never
+  data:
+    redis:
+      host: localhost
+      port: 16379
+      repositories:
+        enabled: false
 #logging:
 #  level:
 #    com.zaxxer.hikari: debug
